# detect

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: calibration.json
manifests/: manifest_pico_train.csv  manifest_pico_val.csv
scripts/: 00_download_all.sh  01_recon.sh  02_train_experts.sh  03_train_vlm.sh  04_eval.sh  10_prepare_modern_expert_data.sh  11_train_modern_experts.sh  runpod_setup.sh
src/piksign/: __init__.py  audit.py  cli.py  datasets.py  fusion.py  launder.py  paths.py
src/piksign/download/: __init__.py  coco.py  drive.py  echo4o.py  eval_picobanana.py  gen_eval_api.py  gptimageedit.py  image_pool.py  openfake.py  pico_banana.py  sharegpt4o.py  unsplash.py
src/piksign/eval/: harness.py  metrics.py
src/piksign/models/: expert.py  provenance.py  vlm.py
src/piksign/recon/: vae_reconstruct.py
src/piksign/train/: filter_pairs.py  label_dpo.py  train_dpo.py  train_expert.py
