[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "piksign"
version = "0.1.0"
description = "PikSign: two-branch AI-generated image detector (pixel-artifact experts + semantic VLM) targeting Nano Banana and GPT-4o, built on the Task-Model Alignment principle."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision",
    "transformers>=4.51",
    "accelerate>=0.30",
    "peft>=0.11",
    "diffusers>=0.31",
    "datasets>=2.19",
    "huggingface_hub",
    "pillow>=10.0",
    "numpy",
    "pandas",
    "tqdm",
    "requests",
    "gdown>=5.1",
    "qwen-vl-utils",
]

[project.optional-dependencies]
# DPO fine-tuning of the semantic VLM branch. TRL 0.29+ keeps Qwen2.5-VL's
# processor-specific vision metadata (image_grid_thw) in DPO batches.
dpo = ["trl[vlm]>=0.29,<0.30"]
# Local DPO label generation with Qwen2.5-VL-72B-AWQ
label = ["vllm==0.10.2"]
# Fresh eval-image generation via commercial APIs
gen = ["google-genai>=1.0", "openai>=1.60"]

[project.scripts]
piksign = "piksign.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
